# relppy

./: .gitignore  README.md  compose.yml  pytest.ini  setup.cfg
.github/workflows/: branch.yml  main.yml  tag.yml
relppy/: client.py  log_handler.py  main.py  protocol.py  server.py  version.py
rsyslog/: Dockerfile  rsyslog-ssl.conf  rsyslog.conf
tests/: test_bench.py  test_clsrv.py  test_logger.py  test_protocol.py
